--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@anthropic-ai/bedrock-sdk": "^0.26.0",
     "@anthropic-ai/sdk": "^0.65.0",
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/typography": "^0.5.19",
