docs: Add release notes for versions 0.0.3 and 0.0.4 to README and update release workflow to link to them.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
             3. Select the downloaded file
             
             ### What's New
-            See [CHANGELOG](https://github.com/vatsalsaglani/tinker/blob/main/CHANGELOG.md) for details.
+            See [Release Notes](https://github.com/vatsalsaglani/tinker#release-notes) for details.
           files: |
             ${{ steps.package.outputs.vsix_file }}
           draft: false
