feat: introduce code block review and application, add usage dashboard, and implement debug logging.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tinker",
   "displayName": "Tinker",
   "description": "Open-source Coding Agent - BYOK",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": "vatsalsaglani",
   "publisher": "vatsalsaglani",
   "icon": "media/tinker-logo-v2.png",
@@ -244,6 +244,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "recharts": "^3.6.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "uuid": "^13.0.0",
